--- a/Maquetacion/index.html
+++ b/Maquetacion/index.html
@@ -6,10 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project css</title>
     <link rel="stylesheet" type="text/css" href="main.css" />
-
     <!-- *Para poner un favicon alado del nombre de la pagina -->
-
-    <link rel="icon" type="image/x-icon" href="img/logo.png"
+    <link rel="icon" type="image/x-icon" href="img/logo.png" />
   </head>
-  <body></body>
+  <body>
+    <!-- Header from -->
+    <header id="header">
+      <div id="logo">
+        <img src="img/logo.png" alt="Logotipo de la web" />
+      </div>
+      <h1>
+        <a href="index.html">Css Master</a>
+      </h1>
+    </header>
+    <!-- Header done -->
+  </body>
 </html>
