Adding nav elements

--- a/Maquetacion/index.html
+++ b/Maquetacion/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/x-icon" href="img/logo.png" />
   </head>
   <body>
-    <!-- Header from -->
+    <!-- *Header from -->
     <header id="header">
       <div id="logo">
         <img src="img/logo.png" alt="Logotipo de la web" />
@@ -19,6 +19,59 @@
         <a href="index.html">Css Master</a>
       </h1>
     </header>
-    <!-- Header done -->
+    <!-- *Header done -->
+    <!-- Nav bar -->
+    <nav id="nav">
+      <ul>
+        <li>
+          <a href="#">Inicio</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="#">Contenido</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="#">Requerimientos</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="#">Lenguajes</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="#">frameworks</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="#">Projectos</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="#">Instructor</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="#">reviews</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="#">blog</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="#">Contactos</a>
+        </li>
+      </ul>
+    </nav>
   </body>
 </html>
