Nav Bar almost finished, at another day tha'll be finished

--- a/Maquetacion/index.html
+++ b/Maquetacion/index.html
@@ -20,54 +20,36 @@
       </h1>
     </header>
     <!-- *Header done -->
-    <!-- Nav bar -->
+    <!-- *Nav bar -->
     <nav id="nav">
       <ul>
         <li>
-          <a href="#">Inicio</a>
+          <a id="child" href="#">Inicio</a>
         </li>
-      </ul>
-      <ul>
         <li>
           <a href="#">Contenido</a>
         </li>
-      </ul>
-      <ul>
         <li>
           <a href="#">Requerimientos</a>
         </li>
-      </ul>
-      <ul>
         <li>
           <a href="#">Lenguajes</a>
         </li>
-      </ul>
-      <ul>
         <li>
           <a href="#">frameworks</a>
         </li>
-      </ul>
-      <ul>
         <li>
           <a href="#">Projectos</a>
         </li>
-      </ul>
-      <ul>
         <li>
           <a href="#">Instructor</a>
         </li>
-      </ul>
-      <ul>
         <li>
           <a href="#">reviews</a>
         </li>
-      </ul>
-      <ul>
         <li>
           <a href="#">blog</a>
         </li>
-      </ul>
-      <ul>
         <li>
           <a href="#">Contactos</a>
         </li>
