Project finished with some adjustments to do

--- a/Maquetacion/index.html
+++ b/Maquetacion/index.html
@@ -16,7 +16,7 @@
         <img src="img/logo.png" alt="Logotipo de la web" />
       </div>
       <h1>
-        <a href="index.html">Css Master</a>
+        <a href="index.html">Css Project Not responsive</a>
       </h1>
     </header>
     <!-- *Header done -->
@@ -55,5 +55,103 @@
         </li>
       </ul>
     </nav>
+    <!-- *nav Bar finished -->
+    <!-- TODO FINISH THE BAR :D -->
+    <!-- *MAIN CONTENT  -->
+    <div id="content">
+      <aside>
+        <div id="student">
+          <h3 class="title">Aula Alumnos</h3>
+          <form>
+            <label>Usuario</label>
+            <input type="text" />
+            <label>Pasword</label>
+            <input type="password" />
+            <input type="submit" value="Entrar" />
+          </form>
+        </div>
+        <div id="Teacher">
+          <h3 class="title">Aula Profesores</h3>
+          <form>
+            <label>Usuario</label>
+            <input type="text" />
+            <label>Pasword</label>
+            <input type="password" />
+            <input type="submit" value="Entrar" />
+          </form>
+        </div>
+      </aside>
+      <div id="maincontent">
+        <section id="front">
+          <span class="stickers">
+            <img class="stick 1" src="img/scotch.png" alt="pegatina" />
+            <img class="stick 1" src="img/scotch.png" alt="pegatina" />
+          </span>
+          <h2 class="titulofront">Noticias front</h2>
+          <article class="article1">
+            <p>
+              <a href="#">Titulo de la Entrada</a>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Accusantium totam iure laboriosam, tempore id est enim commodi
+              minus, dolore consectetur ducimus ipsam! Quod unde vel sint magnam
+              nostrum, nam odit?
+            </p>
+            <span class="date">[26-3-2021. Adrian Castro ]</span>
+          </article>
+
+          <article class="article1">
+            <p>
+              <a href="#">Titulo de la Entrada</a>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Accusantium totam iure laboriosam, tempore id est enim commodi
+              minus, dolore consectetur ducimus ipsam! Quod unde vel sint magnam
+              nostrum, nam odit?
+            </p>
+            <span class="date">[26-3-2021. Adrian Castro ]</span>
+          </article>
+        </section>
+        <!-- Section dos -->
+        <section id="backend">
+          <span class="stickers">
+            <img class="stick 1" src="img/scotch.png" alt="pegatina" />
+            <img class="stick 1" src="img/scotch.png" alt="pegatina" />
+          </span>
+          <h2 class="titulofront">Noticias backend</h2>
+          <article class="article">
+            <p>
+              <a href="#">Titulo de la Entrada</a>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Accusantium totam iure laboriosam, tempore id est enim commodi
+              minus, dolore consectetur ducimus ipsam! Quod unde vel sint magnam
+              nostrum, nam odit?
+            </p>
+            <span class="date">[26-3-2021. Adrian Castro ]</span>
+          </article>
+
+          <article class="article">
+            <p>
+              <a href="#">Titulo de la Entrada</a>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Accusantium totam iure laboriosam, tempore id est enim commodi
+              minus, dolore consectetur ducimus ipsam! Quod unde vel sint magnam
+              nostrum, nam odit?
+            </p>
+            <span class="date">[26-3-2021. Adrian Castro ]</span>
+          </article>
+        </section>
+      </div>
+    </div>
+    <footer id="footer">
+      <p>
+        &copy; Desarrollado por
+        <a href="https://github.com/AdriDevCode/">AdriDevCode</a> como simple
+        ejercicio
+      </p>
+      <br />
+      <p>
+        You can contact to me doing click
+        <a href="https://www.linkedin.com/in/adridevcode/">HERE</a>
+      </p>
+    </footer>
   </body>
 </html>
