--- a/Grid Layout/index.html
+++ b/Grid Layout/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
+    <!-- *Inicio Header -->
     <header class="title">
       <h1>Css-Grid-Responsive</h1>
     </header>
@@ -20,6 +21,8 @@
       <header class="headerlogo">
         <h1>logo</h1>
       </header>
+      <!-- *FIN HEADER -->
+      <!-- *Inicio main content -->
       <main class="content">
         <article class="article">
           <h1>title</h1>
@@ -67,6 +70,8 @@
           </p>
         </article>
       </main>
+      <!-- *FIN MAIN CONTENT -->
+      <!-- *Inicio SideBar -->
       <aside class="sidebar">
         <div>
           <img src="http://lorempixel.com/300/200/sports/" alt="" />
@@ -90,11 +95,15 @@
           </p>
         </div>
       </aside>
+      <!-- *FIN SIDEBAR -->
+      <!-- *Inicio relatedpost -->
       <div class="related-post">Another Post</div>
       <div class="related-post">Another Post</div>
       <div class="related-post">Another Post</div>
       <div class="related-post">Another Post</div>
       <div class="related-post">Another Post</div>
+      <!-- *RELATED POST -->
+      <!-- *incio footer -->
       <footer class="footer">
         <h4>Footer</h4>
         <p>
@@ -102,6 +111,7 @@
           <a href="https://www.linkedin.com/in/adridevcode/">HERE</a>
         </p>
       </footer>
+      <!-- *FIN FOOTER -->
     </div>
   </body>
 </html>
