Exmaple3 Website with menubotton to be fixed

--- a/Grid Layout/index.html
+++ b/Grid Layout/index.html
@@ -74,21 +74,21 @@
       <!-- *Inicio SideBar -->
       <aside class="sidebar">
         <div>
-          <img src="http://lorempixel.com/300/200/sports/" alt="" />
+          <img src="http://placekitten.com/300/200" alt="" />
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit.
             Reiciendis, quos.
           </p>
         </div>
         <div>
-          <img src="http://lorempixel.com/300/200/people/" alt="" />
+          <img src="http://placekitten.com/300/200" alt="" />
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit.
             Reiciendis, quos.
           </p>
         </div>
         <div>
-          <img src="http://lorempixel.com/300/200/city/" alt="" />
+          <img src="http://placekitten.com/300/200" alt="" />
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit.
             Reiciendis, quos.
